prevent brush overflow when changing visibleKeys

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,4 +4,5 @@
 	min-height: 100vh;
 	display: grid;
 	grid-template-rows: 15vh 20vh 65vh;
+	overflow-x: hidden;
 }
